<resources>
    <string name="app_name">Digipost</string>
    <string name="app_deprecation_message">Du må oppdatere Digipost-appen din</string>
    <string name="app_deprecation_market_url">market://details?id=no.digipost.android</string>
    <string name="screenlock_message1">For at appen skal huske innloggingen må du skru på
        skjermlås på enheten din.
    </string>
    <string name="screenlock_message2">Uten skjermlås må du logge inn med fødselsnummer og passord
        hver gang du åpner appen.
    </string>
    <string name="yes_apply_screenlock">Skru på skjermlås</string>
    <string name="no_dont_use_screenlock">Avbryt</string>
    <string name="screenlock_tips_title">Lei av å taste passord?</string>
    <string name="screenlock_tips_message">Aktiver skjermlåsen på enheten din, så husker vi deg ved neste innlogging.</string>
    <string name="screenlock_show_tips">Vis meg</string>
    <string name="screenlock_hide_tips">Ikke vis igjen</string>
    <string name="idporten_tips_title">Enklere innlogging</string>
    <string name="idporten_tips_message">Logger du inn med passord istedenfor ID-porten, så husker vi deg ved neste innlogging.</string>
    <string name="idporten_tips_ok_button">Ok</string>
    <string name="drawer_create_new_folder_default_name">Mappenavn</string>
    <string name="drawer_create_folder">Opprett mappe</string>
    <string name="drawer_inbox">Postkassen</string>
    <string name="drawer_my_folders">MINE MAPPER</string>
    <string name="drawer_my_account">MIN KONTO</string>
    <string name="drawer_change_account">Bytt konto</string>
    <string name="drawer_invoice_overview">Faktura-avtaler</string>
    <string name="drawer_settings">Innstillinger</string>
    <string name="drawer_help">Hjelp</string>
    <string name="drawer_login">Logg inn</string>
    <string name="drawer_logout">Logg ut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="icon_folder">FOLDER</string>
    <string name="icon_paper">PAPER</string>
    <string name="icon_tags">TAGS</string>
    <string name="icon_letter">LETTER</string>
    <string name="icon_heart">HEART</string>
    <string name="icon_trophy">TROPHY</string>
    <string name="icon_box">BOX</string>
    <string name="icon_home">HOME</string>
    <string name="icon_star">STAR</string>
    <string name="icon_suitcase">SUITCASE</string>
    <string name="icon_camera">CAMERA</string>
    <string name="icon_money">MONEY</string>
    <string name="icon_beer">BONUS</string>
    <string name="icon_receipt">RECEIPT</string>
    <string name="ok">Ok</string>
    <string name="close">Lukk</string>
    <string name="abort">Avbryt</string>
    <string name="loading_content">Laster innhold…</string>
    <string name="search">Søk</string>
    <string name="yes">Ja</string>
    <string name="delete">Slett</string>
    <string name="move">Flytt</string>
    <string name="move_to">Flytt til</string>
    <string name="open">Åpne</string>
    <string name="back">Tilbake</string>
    <string name="preview">Forhåndsvis</string>
    <string name="edit">Rediger</string>
    <string name="done">Ferdig</string>
    <string name="search_in">Søk i\u0020</string>
    <string name="copy">Kopier tekst</string>
    <string name="save">Lagre</string>
    <string name="save_to_device">Last ned</string>
    <string name="open_external">Åpne i en annen app</string>
    <string name="saving">Lagrer…</string>
    <string name="uploaded">Opplastet</string>
    <string name="public_entity">Offentlig: %s</string>
    <string name="information">Informasjon</string>
    <string name="or">eller</string>
    <string name="move_checkbox_description">Avhukingsboks for å velge flere listeelementer til mengdeoperasjoner, som flytt og slett</string>
    <string name="emptyview_mailbox">Meldinger du mottar i Digipost vil bli lagt her.\nDu kan også laste opp egne filer i mapper</string>
    <string name="emptyview_folder">Last opp filer for sikker lagring.\nDu kan enkelt flytte innhold mellom mapper.</string>
    <string name="emptyview_image">Tom mappe illustrasjon</string>
    <string name="document_singular">dokumentet</string>
    <string name="document_plural">dokumentene</string>
    <string name="message_singular">meldingen</string>
    <string name="message_plural">meldingene</string>
    <string name="delete_multiple">Vil du slette disse %1$d %2$s?</string>
    <string name="delete_single">Vil du slette denne %1$s?</string>
    <string name="delete_progress_document">Sletter %1$s (%2$d/%3$d)</string>
    <string name="delete_cancelled">%1$d av %2$d slettet.</string>
    <string name="list_document_type_invoice_paid">Faktura: Lagt til betaling</string>
    <string name="list_document_type_invoice_unpaid">Faktura: Ubehandlet</string>
    <string name="list_document_type_collection_notice">Inkasso</string>
    <string name="login_normal_login_title">Passord-innlogging</string>
    <string name="login_normal_login_description">Kun tilgang til å lese post fra privatpersoner og bedrifter.</string>
    <string name="login_normal_login_button">Med fødselsnr. og passord</string>
    <string name="login_idporten_login_title">Logg inn med elektronisk ID</string>
    <string name="login_idporten_login_description">Du kan velge logge inn med MinID, BankID, BankID på mobil, eller Buypass ID</string>
    <string name="login_idporten_login_button">Logg inn via ID-porten</string>
    <string name="login_forgot_password_button_text">Glemt passord</string>
    <string name="login_forgot_password_dialog_title">Glemt passord</string>
    <string name="login_forgot_password_dialog_message">Du kan endre passord på digipost.no.\nBruk det nye passordet for å logge inn i appen.</string>
    <string name="login_forgot_password_dialog_open_link_button">Til digipost.no</string>
    <string name="login_forgot_password_dialog_close_button">Lukk</string>
    <string name="login_register_title">Har du ikke Digipost-konto?</string>
    <string name="login_registrationbutton_text">Registrer deg her</string>
    <string name="login_privacy_title">Personvern i Digipost</string>
    <string name="login_privacybutton_text">Les mer her</string>
    <string name="login_idporten_login_description_short">Tilgang til å lese all post i Digipost</string>
    <string name="login_header_logo_contentdescription">Posten Norge logo</string>
    <string name="context_refresh">Oppdater</string>
    <string name="pdf_no_further_occurences_found">Ingen flere treff funnet.</string>
    <string name="pdf_text_not_found">Fant ingen treff.</string>
    <string name="pdf_open_failed">Kunne ikke åpne dokumentet.</string>
    <string name="pdf_searching_">Søker…</string>
    <string name="pdf_search_document">Søk i dokumentet</string>
    <string name="pdf_promt_save_to_sd">Ønsker du å lagre dokumentet?</string>
    <string name="pdf_saved_to_sd">Dokumentet er lagret i nedlastingsområde.</string>
    <string name="pdf_save_to_sd_failed">En feil oppstod under lagringen.</string>
    <string name="pdf_select_copied">Markert tekst kopiert.</string>
    <string name="pdf_select_no_text_selected">Ingen tekst markert.</string>
    <string name="upload">Last opp</string>
    <string name="uploading">Laster opp %1$s (%2$d/%3$d)</string>
    <string name="upload_dialog">Er du sikker på at du vil laste opp\u0020</string>
    <string name="upload_folder_exception">Mapper kan ikke lastes opp</string>
    <string name="upload_space_used">% lagringsplass brukt</string>
    <string name="upload_files_uploaded">%1$d av %2$d filer ble lastet opp.</string>
    <string name="upload_complete">Opplastning fullført.</string>
    <string name="upload_confirm_single">Vil du laste opp denne filen?</string>
    <string name="upload_confirm_multiple">Vil du laste opp disse %1$d filene?</string>
    <string name="upload_too_large_file">Filen er for stor. Prøv igjen med en fil under 100 MB.</string>
    <string name="no_files">Ingen filer</string>
    <string name="unsupported_message_top">Digipost-appen kan ikke vise denne filtypen (.%1$s).</string>
    <string name="preferences">Innstillinger</string>
    <string name="preferences_requires_android_m">Innstillinger krever Android Marshmallow (M) og oppover.</string>
    <string name="pref_general_settings">App innstillinger</string>
    <string name="pref_show_bank_id_documents_title">BankID &amp; Buypass</string>
    <string name="pref_show_bank_id_documents_summary">Vis dokumenter som krever innlogging med BankID eller Buypass</string>
    <string name="pref_screen_rotation_title">Skjermrotasjon</string>
    <string name="pref_screen_rotation_summary">Tillat skjermrotasjon</string>
    <string name="pref_screen_confirm_delete_title">Bekreft før sletting</string>
    <string name="pref_screen_confirm_delete_summary">Vis bekreftelsesdialog før sletting</string>
    <string name="pref_screen_personal_settings_title">Personlige innstillinger</string>
    <string name="pref_screen_notification_settings_title">Din kontaktinformasjon</string>
    <string name="pref_screen_notification_settings_subtitle">Digipost bruker e-postadressen og mobilnummeret til å varsle deg om nye meldinger, vennligst se over og hold informasjonen oppdatert</string>
    <string name="pref_screen_notification_settings_invalid_email_title">Dobbeltsjekk dine e-postadresser</string>
    <string name="pref_screen_notification_settings_invalid_email_message">Det kan se ut til at du har oppgitt en ugyldig e-postadresse. Se over at alt stemmer og prøv på nytt.</string>
    <string name="pref_screen_notification_settings_invalid_phone_title">Dobbeltsjekk ditt mobilnummer</string>
    <string name="pref_screen_notification_settings_invalid_phone_message">Det kan se ut til at du har oppgitt et ugyldig mobilnummer. Sjekk at det stemmer og prøv på nytt.</string>
    <string name="pref_screen_notification_settings_updating">Lagrer kontaktopplysninger</string>
    <string name="pref_notification_settings_letters_title">Varsling om nye meldinger</string>
    <string name="pref_notification_settings_letters_new_title">E-post om nye meldinger</string>
    <string name="pref_notification_settings_letters_new_subtitle">Send meg en e-post hvis jeg får en nytt melding</string>
    <string name="pref_notification_settings_letters_unread_title">Ukentlig e-post om uleste meldinger</string>
    <string name="pref_notification_settings_letters_unread_subtitle">Send meg en e-post hver uke hvis jeg har uleste meldinger.</string>
    <string name="pref_notification_settings_letters_important_title">SMS om ekstra viktige meldinger</string>
    <string name="pref_notification_settings_letters_important_subtitle">Tillat avsendere å sende meg en SMS-melding om viktige meldinger.</string>
    <string name="pref_notification_settings_contact_info_title">Kontaktopplysninger</string>
    <string name="pref_notification_settings_contact_info_phone_title">Ditt mobilnummer:</string>
    <string name="pref_notification_settings_contact_info_phone_hint">Mobilnummer</string>
    <string name="pref_notification_settings_contact_info_countrycode_hint">47</string>
    <string name="pref_notification_settings_contact_info_countrycode_hint_prefix">+</string>
    <string name="pref_notification_settings_contact_info_email_title">E-postadresser:</string>
    <string name="pref_notification_settings_contact_info_email_hint">E-postadresse</string>
    <string name="pref_notification_settings_button">Lagre kontaktinformasjon</string>
    <string name="pref_personal_settings_info_title">Personlig informasjon</string>
    <string name="pref_personal_settings_info_personalidentificationnumber">Fødselsnummer</string>
    <string name="pref_personal_settings_info_full_name">Navn</string>
    <string name="pref_personal_settings_info_address">Adresse</string>
    <string name="dialog_send_to_bank">Legg til betaling</string>
</resources>