<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/pdfmenu_send_to_bank"
            android:title="@string/dialog_send_to_bank"
            android:visible="false"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/pdfmenu_search"
            android:title="@string/search"
            android:icon="@drawable/white_search_48"
            app:showAsAction="never|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
            android:id="@+id/pdfmenu_delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_action_delete"
            app:showAsAction="never"/>

    <item
            android:id="@+id/pdfmenu_move"
            android:title="@string/move"
            app:showAsAction="never"/>

    <item
            android:id="@+id/pdfmenu_copy"
            app:showAsAction="never"
            android:title="@string/copy">
    </item>
    <item
            android:id="@+id/pdfmenu_open_external"
            app:showAsAction="never"
            android:title="@string/open_external">
    </item>
    <item
            android:id="@+id/pdfmenu_save"
            app:showAsAction="never"
            android:title="@string/save_to_device">
    </item>

</menu>