<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_image_html_unsupported_send_to_bank"
            android:title="@string/dialog_send_to_bank"
            android:visible="false"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_image_html_unsupported_delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_action_delete"
            app:showAsAction="never" />

    <item
            android:id="@+id/menu_image_html_move"
            android:title="@string/move"
            app:showAsAction="never" />

    <item
            android:id="@+id/menu_image_html_unsupported_open_external"
            android:title="@string/open_external"
            app:showAsAction="never">
    </item>
    <item
            android:id="@+id/menu_image_html_unsupported_save"
            android:title="@string/save_to_device"
            app:showAsAction="never">
    </item>

</menu>