<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/htmlmenu_send_to_bank"
            android:title="@string/dialog_send_to_bank"
            android:visible="false"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/htmlmenu_delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_action_delete"
            app:showAsAction="never" />

    <item
            android:id="@+id/htmlmenu_move"
            android:title="@string/move"
            android:visible="false"
            app:showAsAction="never" />

    <item
            android:id="@+id/htmlmenu_info"
            android:title="@string/information"
            app:showAsAction="ifRoom" />

</menu>