<!--
/**
 * Copyright (C) Posten Norge AS
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mountains">

    <RelativeLayout
        android:id="@+id/login_controller_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idporten_loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/login_idportenButton"
            android:layout_alignParentTop="true"
            android:text="@string/login_idporten_login_title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_idporten_login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idporten_loginTitle"
            android:layout_alignStart="@+id/idporten_loginTitle"
            android:layout_alignEnd="@id/login_idportenButton"
            android:layout_marginTop="10dp"
            android:text="@string/login_idporten_login_description"
            android:textColor="@color/black_subject"
            android:textSize="12sp" />

        <Button
            android:id="@+id/login_idportenButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/login_idporten_login_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:background="@drawable/red_button_style"
            android:text="@string/login_idporten_login_button"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_normal_loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_idportenButton"
            android:layout_alignStart="@+id/login_normal_login_description"
            android:layout_marginTop="60dp"
            android:text="@string/login_normal_login_title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_normal_login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_normal_loginTitle"
            android:layout_alignStart="@+id/login_passwordButton"
            android:layout_alignEnd="@+id/login_passwordButton"
            android:layout_marginTop="10dp"
            android:text="@string/login_normal_login_description"
            android:textColor="@color/black_subject"
            android:textSize="12sp" />

        <Button
            android:id="@+id/login_passwordButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/login_normal_login_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/light_grey_button"
            android:text="@string/login_normal_login_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_passwordButton"
            android:layout_alignStart="@+id/login_passwordButton"
            android:layout_alignLeft="@+id/login_passwordButton"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:text="@string/login_forgot_password_button_text"
            android:textColor="@color/black_subject"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_registrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_forgotPasswordButton"
            android:layout_alignEnd="@+id/login_passwordButton"
            android:layout_alignRight="@+id/login_passwordButton"
            android:layout_alignBottom="@+id/login_forgotPasswordButton"
            android:background="@color/transparent"
            android:gravity="right"
            android:text="@string/login_registrationbutton_text"
            android:textAlignment="textEnd"
            android:textColor="@color/black_subject"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_privacy_button_background"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/login_privacyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey_privacy_button_background"
                android:focusable="true"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/login_privacybutton_text"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/postenlogo_hvitskygge_"
        android:id="@+id/login_posten_logo"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login_header_logo_contentdescription"/>

</RelativeLayout>
