<!--
/**
 * Copyright (C) Posten Norge AS
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7DADE"
    android:orientation="vertical"
    android:weightSum="13">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/actionbar_red_background"
        android:gravity="center"
        android:layout_weight="6"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/posten_logo"
            android:layout_width="111dp"
            android:layout_height="32dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/login_header_logo_contentdescription"
            android:cropToPadding="false"
            android:gravity="center|center_vertical|center_horizontal"
            android:src="@drawable/posten_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/screenlock_message1"
                android:textColor="#000000"
            android:gravity="left"
                android:textSize="18sp"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:text="@string/screenlock_message2"
                android:textSize="18sp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center">

        <Button

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button_style"
                android:text="@string/yes_apply_screenlock"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/screenlockactivity_yes_button"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:background="@drawable/grey_button_style"
                android:text="@string/no_dont_use_screenlock"
                android:textColor="@color/white"
                android:id="@+id/screenlockactivity_no_button"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="6"
            android:orientation="vertical">
            <Button
                android:id="@+id/login_privacyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D7DADE"
                android:focusable="true"
                android:gravity="center|center_horizontal"
                android:text="@string/login_privacybutton_text"
                android:textColor="@color/login_grey_text"
                android:textSize="18sp"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
